--- a/XRDandDetector.html
+++ b/XRDandDetector.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>X-ray Diffraction Simulator (Powder + Detector View)</title>
+  <title>X-ray Diffraction Simulator1 (Powder + Detector View)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2"></script>
