--- a/XRDandDetector.html
+++ b/XRDandDetector.html
@@ -22,7 +22,7 @@
   </style>
 </head>
 <body>
-<h1>X-ray Diffraction Simulator</h1>
+<h1>X-ray Diffraction Simulator1</h1>
 <p class="note">
   Powder XRD profile (2θ stick plot with (hkl) labels)<br>
   and detector view (Debye-Scherrer rings on area detector).<br>
