--- a/XRDandDetector.html
+++ b/XRDandDetector.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>X-ray Diffraction Simulator1 (Powder + Detector View)</title>
+  <title>X-ray Diffraction Simulator (Powder + Detector View)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Zoom plugin -->
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2"></script>
+  <!-- Annotation plugin (needed for labels) -->
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@2"></script>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; max-width: 1100px; margin: 0 auto; }
@@ -18,11 +21,11 @@
     #charts { display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px; }
     .chart-container { flex: 1; min-width: 450px; position: relative; }
     #chart-toolbar { margin-top: 8px; }
-    canvas { background: #fff; border: 1px solid #ddd; }
+    canvas { background: #fff; border: 1px solid #ddd; display: block; }
   </style>
 </head>
 <body>
-<h1>X-ray Diffraction Simulator1</h1>
+<h1>X-ray Diffraction Simulator2</h1>
 <p class="note">
   Powder XRD profile (2θ stick plot with (hkl) labels)<br>
   and detector view (Debye-Scherrer rings on area detector).<br>
@@ -100,64 +103,41 @@ function wavelength_nm(energy_keV) {
   return hc / energy_keV;
 }
 
-// Generate allowed (hkil) for HCP, (hkl) for cubic
+// Generate reflections (same as before, slightly cleaned)
 function generateReflections(structure, a_nm, c_nm = null) {
   const reflections = [];
-  const a = a_nm;
-  const c = c_nm || a * Math.sqrt(8/3); // ideal c/a if not given
   const maxIndex = 10;
+  const a = a_nm;
+  const c = c_nm || a * Math.sqrt(8/3);
 
   if (structure === "FCC" || structure === "BCC") {
-    for (let h = 0; h <= maxIndex; h++) {
-      for (let k = 0; k <= maxIndex; k++) {
-        for (let l = 0; l <= maxIndex; l++) {
-          if (h === 0 && k === 0 && l === 0) continue;
-
-          let allowed = false;
-          if (structure === "FCC") {
-            if ((h+k+l) % 2 === 0 && h%2 === k%2 && k%2 === l%2) allowed = true;
-          } else if (structure === "BCC") {
-            if ((h+k+l) % 2 === 1) allowed = true;
-          }
-          if (!allowed) continue;
-
-          const d = a / Math.sqrt(h*h + k*k + l*l); // nm
-          reflections.push({h, k, l, i:0, d, hkl: `(${h}${k}${l})`});
-        }
+    for (let h = 0; h <= maxIndex; h++) for (let k = 0; k <= maxIndex; k++) for (let l = 0; l <= maxIndex; l++) {
+      if (h === 0 && k === 0 && l === 0) continue;
+      let allowed = false;
+      if (structure === "FCC") allowed = (h+k+l)%2===0 && h%2===k%2 && k%2===l%2;
+      if (structure === "BCC") allowed = (h+k+l)%2===1;
+      if (allowed) {
+        const d = a / Math.sqrt(h*h + k*k + l*l);
+        reflections.push({h,k,l, d, hkl: `(${h}${k}${l})`});
       }
     }
   } else if (structure === "HCP") {
-    // Standard hkil with i = -(h+k)
-    for (let h = 0; h <= maxIndex; h++) {
-      for (let k = 0; k <= maxIndex; k++) {
-        if (h === 0 && k === 0) continue;
-        for (let l = 0; l <= maxIndex; l++) {
-          // Common extinction: -h+k+l = 3n for some, but we allow most typical ones
-          const d_inv_sq = (4/3)*(h*h + h*k + k*k)/(a*a) + l*l/(c*c);
-          const d = 1 / Math.sqrt(d_inv_sq); // nm
-          const hkl = l === 0 ? `(${h}${k}0)` : `(${h}${k}${l})`;
-          reflections.push({h, k, l, i: - (h+k), d, hkl});
-        }
+    for (let h = 0; h <= maxIndex; h++) for (let k = 0; k <= maxIndex; k++) {
+      if (h===0 && k===0) continue;
+      for (let l = 0; l <= maxIndex; l++) {
+        const d_inv_sq = (4/3)*(h*h + h*k + k*k)/(a*a) + l*l/(c*c);
+        const d = 1 / Math.sqrt(d_inv_sq);
+        const hkl = l === 0 ? `(${h}${k}0)` : `(${h}${k}${l})`;
+        reflections.push({h,k,l, d, hkl});
       }
     }
   }
   return reflections;
 }
 
-// Simplified multiplicity + Lorentz-polarization factor
-function calcIntensity(ref, theta, structure) {
-  let mult = 1;
-  if (structure === "FCC" || structure === "BCC") {
-    const perms = [];
-    for (let sx=-1; sx<=1; sx+=2)
-      for (let sy=-1; sy<=1; sy+=2)
-        for (let sz=-1; sz<=1; sz+=2)
-          if (!(sx*ref.h===0 && sy*ref.k===0 && sz*ref.l===0))
-            perms.push(true);
-    mult = perms.length / 8; // average
-  } else if (structure === "HCP") {
-    mult = 12; // rough
-  }
+// Simplified intensity
+function calcIntensity(ref, theta) {
+  const mult = 12; // rough average for powder
   const LP = (1 + Math.cos(2*theta)**2) / (Math.sin(theta)**2 * Math.cos(theta));
   return mult * LP;
 }
@@ -177,7 +157,7 @@ function calculateAndPlot() {
     const c_nm = structure==="HCP" ? parseFloat(document.getElementById("c").value) || 0.521 : null;
 
     const lambda = wavelength_nm(energy);
-    const q_max = 80; // nm^{-1}
+    const q_max = 80;
     const twoTheta_max = 2 * Math.asin(q_max * lambda / (4*Math.PI)) * 180 / Math.PI;
 
     const refs = generateReflections(structure, a_nm, c_nm);
@@ -193,24 +173,19 @@ function calculateAndPlot() {
       const q = 4 * Math.PI * sinTheta / lambda;
       if (q > q_max) return;
 
-      const intensity = calcIntensity(ref, theta, structure);
-
-      peaks.push({
-        twoTheta,
-        intensity,
-        hkl: ref.hkl
-      });
+      const intensity = calcIntensity(ref, theta);
+      peaks.push({twoTheta, intensity, hkl: ref.hkl});
 
       const r_mm = distance * Math.tan(2 * theta);
-      rings.push({r_mm, hkl: ref.hkl, intensity});
+      rings.push({r_mm, hkl: ref.hkl});
     });
 
     peaks.sort((a,b) => a.twoTheta - b.twoTheta);
-    const maxI = Math.max(...peaks.map(p=>p.intensity), 1);
+    const maxI = Math.max(...peaks.map(p => p.intensity), 1);
     peaks.forEach(p => p.relI = p.intensity / maxI * 100);
 
     plotXRDProfile(peaks, twoTheta_max);
-    plotDetectorView(rings, detX, detY, Math.max(...rings.map(r=>r.r_mm), Math.max(detX,detY)/2) * 1.1);
+    plotDetectorView(rings, detX, detY);
 
     status.style.color = "green";
     status.textContent = `Plotted ${peaks.length} reflections (2θ max ≈ ${twoTheta_max.toFixed(1)}°).`;
@@ -221,67 +196,56 @@ function calculateAndPlot() {
   }
 }
 
-function plotXRDProfile(peaks, twoTheta_max) {
-  const ctx = document.getElementById("profile").getContext("2d");
-  if (chartProfile) chartProfile.destroy();
+// 关键修复：安全销毁旧图表
+function safeDestroy(chart) {
+  if (chart && typeof chart.destroy === 'function') {
+    chart.destroy();
+  }
+}
 
-  // Stick plot: vertical lines from 0 to height
+function plotXRDProfile(peaks, twoTheta_max) {
+  const canvas = document.getElementById("profile");
+  const ctx = canvas.getContext("2d");
+
+  safeDestroy(chartProfile);
+  chartProfile = null;
+
   const stickData = [];
-  const labelData = [];
   peaks.forEach(p => {
     stickData.push({x: p.twoTheta, y: 0});
     stickData.push({x: p.twoTheta, y: p.relI});
-    stickData.push(null); // break line
-    labelData.push({x: p.twoTheta, y: p.relI + 3, hkl: p.hkl});
+    stickData.push(null); // line break
   });
 
   chartProfile = new Chart(ctx, {
-    data: {
-      datasets: [
-        {
-          type: 'line',
-          data: stickData,
-          borderColor: '#0066ff',
-          borderWidth: 2,
-          pointRadius: 0,
-          tension: 0
-        }
-      ]
-    },
+    data: { datasets: [{
+      type: 'line',
+      data: stickData,
+      borderColor: '#0066ff',
+      borderWidth: 1.8,
+      pointRadius: 0
+    }] },
     options: {
       responsive: true,
+      maintainAspectRatio: false,
       scales: {
-        x: {
-          type: 'linear',
-          title: { display: true, text: '2θ (°)' },
-          min: 0,
-          max: twoTheta_max * 1.05
-        },
-        y: {
-          title: { display: true, text: 'Relative Intensity (%)' },
-          min: 0,
-          max: 110
-        }
+        x: { title: { display: true, text: '2θ (°)' }, min: 0, max: twoTheta_max * 1.05 },
+        y: { title: { display: true, text: 'Relative Intensity (%)' }, min: 0, max: 110 }
       },
       plugins: {
+        legend: { display: false },
         annotation: {
-          annotations: labelData.map((p,i) => ({
+          annotations: peaks.map(p => ({
             type: 'label',
-            xValue: p.x,
-            yValue: p.y,
+            xValue: p.twoTheta,
+            yValue: p.relI + 4,
             content: p.hkl,
-            font: { size: 11 },
+            font: { size: 10 },
             color: '#000',
-            backgroundColor: 'rgba(255,255,255,0.7)',
-            padding: 2,
+            backgroundColor: 'rgba(255,255,255,0.8)',
+            padding: 3,
             rotation: 90
           }))
-        },
-        legend: { display: false },
-        tooltip: {
-          callbacks: {
-            label: ctx => `${ctx.parsed.y.toFixed(1)}% ${peaks[Math.floor(ctx.dataIndex/3)].hkl}`
-          }
         },
         zoom: {
           pan: { enabled: true, mode: 'xy' },
@@ -292,37 +256,26 @@ function plotXRDProfile(peaks, twoTheta_max) {
   });
 }
 
-function plotDetectorView(rings, detX, detY, maxR) {
-  const ctx = document.getElementById("detector").getContext("2d");
-  if (chartDetector) chartDetector.destroy();
+function plotDetectorView(rings, detX, detY) {
+  const canvas = document.getElementById("detector");
+  const ctx = canvas.getContext("2d");
+
+  safeDestroy(chartDetector);
+  chartDetector = null;
+
+  const maxR = Math.max(...rings.map(r => r.r_mm), Math.max(detX, detY)/2) * 1.15;
 
   const datasets = [];
 
-  // Rings
   rings.forEach(ring => {
     datasets.push({
       type: 'scatter',
-      data: [{x:0, y:0}],
-      radius: ring.r_mm * (ctx.canvas.width / (2 * maxR)), // scale to canvas
+      data: [{x: 0, y: 0}],
+      radius: ring.r_mm,
       borderColor: 'rgba(255, 100, 100, 0.7)',
       borderDash: [8, 4],
       borderWidth: 2,
-      pointStyle: 'circle',
       backgroundColor: 'transparent'
-    });
-    // Label
-    datasets.push({
-      type: 'scatter',
-      data: [{x: ring.r_mm * 0.85, y: 0}],
-      pointBackgroundColor: 'transparent',
-      datalabels: {
-        display: true,
-        color: '#d00',
-        font: { size: 10 },
-        align: 'end',
-        offset: 4,
-        labels: { title: { text: ring.hkl } }
-      }
     });
   });
 
@@ -330,33 +283,38 @@ function plotDetectorView(rings, detX, detY, maxR) {
     data: { datasets },
     options: {
       responsive: true,
+      maintainAspectRatio: true,
       aspectRatio: 1,
-      scales: {
-        x: { display: false, min: -maxR, max: maxR },
-        y: { display: false, min: -maxR, max: maxR }
-      },
+      scales: { x: { display: false, min: -maxR, max: maxR }, y: { display: false, min: -maxR, max: maxR } },
       plugins: {
         legend: { display: false },
-        tooltip: { enabled: false },
         annotation: {
           annotations: {
             box: {
               type: 'box',
-              xMin: -detX/2,
-              xMax: detX/2,
-              yMin: -detY/2,
-              yMax: detY/2,
+              xMin: -detX/2, xMax: detX/2,
+              yMin: -detY/2, yMax: detY/2,
               borderColor: '#000',
               borderWidth: 3,
               backgroundColor: 'transparent'
             },
             center: {
               type: 'point',
-              xValue: 0,
-              yValue: 0,
+              xValue: 0, yValue: 0,
               radius: 5,
               backgroundColor: '#000'
-            }
+            },
+            ...rings.reduce((acc, ring, i) => {
+              acc[`label${i}`] = {
+                type: 'label',
+                xValue: ring.r_mm * 0.88,
+                yValue: 0,
+                content: ring.hkl,
+                color: '#d00',
+                font: { size: 10 }
+              };
+              return acc;
+            }, {})
           }
         },
         zoom: {
@@ -373,16 +331,12 @@ function resetZoom(id) {
   if (id === 'detector' && chartDetector) chartDetector.resetZoom();
 }
 
-// Switch structure
+// Structure switch
 document.getElementById("structure").addEventListener("change", function() {
   const s = this.value;
   document.getElementById("c-row").style.display = s === "HCP" ? "flex" : "none";
-  if (s !== "HCP") {
-    document.getElementById("a").value = "0.286";
-  } else {
-    document.getElementById("a").value = "0.321";
-    document.getElementById("c").value = "0.521";
-  }
+  document.getElementById("a").value = s === "HCP" ? "0.321" : "0.286";
+  if (s === "HCP") document.getElementById("c").value = "0.521";
 });
 </script>
 
